[project]
name = "ra-bio"
version = "0.2.0"
description = "Public runtime library for Japanese microorganism risk and law reference data"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["bio", "microorganism", "risk-assessment", "law-screening", "taxonomy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/ra_bio/data/bio.sqlite3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ra_bio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
